[tool.poetry]
name = "imbalanced-clustering"
version = "0.1.0"
description = "Clustering metrics for imbalanced datasets"
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.22"
scipy = ">=1.8"
scikit-learn = ">=1.0"
pandas = ">=1.4"
Cython = ">=0.29"
jupyter = ">=1.0"
ipykernel = ">=6.9"
jupyterlab = ">=3.2"
jupyterlab-latex = ">=3.1"
seaborn = ">=0.11"

[tool.poetry.dev-dependencies]
pytest = ">=6.2"
black = ">=22.1"
flake8 = ">=3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
