[tool.poetry]
name = "balanced-clustering"
version = "0.1.0"
description = "Clustering metrics for imbalanced datasets"
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "*"
scipy = "*"
scikit-learn = "*"
pandas = "*"
Cython = "*"
jupyter = "*"
ipykernel = "*"
jupyterlab = "*"
seaborn = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
